<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/box_list_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context="com.avisio.dashboard.usecase.crud_box.read.BoxListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_activity_appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/Theme.Avisio.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/box_list_app_bar"
            android:layout_width="match_parent"
            app:menu="@menu/menu_main"
            android:layout_height="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.avisio.dashboard.common.ui.breadcrump.BreadCrumb
        android:id="@+id/breadCrumb"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_appbar"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/box_list_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breadCrumb"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/no_matching_item_label"
        android:text="@string/box_list_no_matching_item_hint"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/breadCrumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_new_box"
        android:text="@string/fab_create_box_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintVertical_bias="0.989"
        app:icon="@drawable/dashboard_item_icon_default"
        android:contentDescription="@string/box_list_fab_content_description" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_new_folder"
        android:text="@string/fab_create_folder_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintVertical_bias="0.989"
        app:icon="@drawable/ic_create_folder"
        android:contentDescription="@string/box_list_fab_content_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_expand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_add_entry"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintVertical_bias="0.989"
        android:contentDescription="@string/box_list_fab_content_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_cancel_workflow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_close"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintVertical_bias="0.989"
        android:contentDescription="@string/fab_cancel_workflow" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit_selected_dashboard_items"
        android:text="@string/edit_selected_dashboard_items"
        android:visibility="gone"
        app:icon="@drawable/ic_edit_item"
        app:layout_constraintHorizontal_bias="0.954"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_move_all"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_move_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/move_selected_dashboard_items"
        android:text="@string/move_selected_dashboard_items"
        android:visibility="gone"
        app:icon="@drawable/ic_move_item"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_delete_all"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_selected_dashboard_items"
        android:text="@string/delete_selected_dashboard_items"
        android:visibility="gone"
        app:icon="@drawable/ic_delete_item"
        android:layout_marginBottom="20dp"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>